if ENABLE_KEM
MAYBE_KEM=kem
endif

if ENABLE_IBE
MAYBE_IBE=ibe
endif

if ENABLE_ENCRYPTION
MAYBE_ENC=enc
endif

if ENABLE_SIGNATURES
MAYBE_SIG=sig
endif

MAYBE_DH=dh

SUBDIRS = helloworld $(MAYBE_SIG) $(MAYBE_ENC) $(MAYBE_KEM) $(MAYBE_DH) $(MAYBE_IBE)
DIST_SUBDIRS = helloworld $(MAYBE_SIG) $(MAYBE_ENC) $(MAYBE_KEM) $(MAYBE_DH) $(MAYBE_IBE)
