
###############################################################################
#                     COMMON UTILITY CONVENIENCE LIBRARIES
###############################################################################

if WITH_MULTITHREADING
MAYBE_THREADING = threading
endif

SUBDIRS = third_party arith crypto ecc entropy sampling $(MAYBE_THREADING)

DIST_SUBDIRS = third_party arith crypto ecc entropy sampling $(MAYBE_THREADING)
