
###############################################################################
#                     COMMON UTILITY CONVENIENCE LIBRARIES
###############################################################################

if WITH_MULTITHREADING
MAYBE_THREADING = threading
endif

SUBDIRS = arith crypto ecc entropy sampling $(MAYBE_THREADING)

DIST_SUBDIRS = arith crypto ecc entropy sampling $(MAYBE_THREADING)
