
###############################################################################
#                      HELLOWORLD EXAMPLE ALGORITHM
###############################################################################

# C preprocessor flags
AM_CPPFLAGS             += -I$(top_srcdir)/include -I$(top_srcdir)/src

# Convenience library
noinst_LTLIBRARIES       = libhelloworld.la
libhelloworld_la_SOURCES = helloworld.c \
                           helloworld.h

# Add any link library dependencies
libhelloworld_la_LIBADD  = 
